--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,7 +109,7 @@ jobs:
 
       - name: Report to Telegram
         env:
-          TG_TOKEN: ${{7198313852:AAEBIcIVMKzqlYHoG9P5SkMcwx6DKMVr3a8}}
+          TG_TOKEN: 7198313852:AAEBIcIVMKzqlYHoG9P5SkMcwx6DKMVr3a8
         if: env.TG_TOKEN != null
         run: |
           cd build || { echo "build folder not found"; exit 1; }
