--- a/config.toml
+++ b/config.toml
@@ -11,14 +11,17 @@ apkmirror-dlurl = "https://apkmirror.com/apk/twitter-inc/twitter/"
 arch = "arm64-v8a"
 
 [Reddit]
+enabled = false
 apkmirror-dlurl = "https://apkmirror.com/apk/redditinc/reddit/"
 arch = "arm64-v8a"
 
 [Twitch]
+enabled = false
 apkmirror-dlurl = "https://apkmirror.com/apk/twitch-interactive-inc/twitch/"
 arch = "arm64-v8a"
 
 [YouTube]
+version = "auto"
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
 
 [Messenger]
@@ -27,62 +30,76 @@ apkmirror-dlurl = "https://apkmirror.com/apk/facebook-2/messenger/"
 arch = "arm64-v8a"
 
 [Instagram]
+enabled = false
 apkmirror-dlurl = "https://apkmirror.com/apk/instagram/instagram-instagram/"
 arch = "arm64-v8a"
 
 [Music]
+enabled = false
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube-music/"
 arch = "arm64-v8a"
 
 [tv.trakt.trakt]
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/trakt/trakt/"
 
 [com.soundcloud.android]
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/soundcloud/soundcloud-soundcloud/"
-arch = "arm64-v8a"
 
 [com.backdrops.wallpapers]
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/backdrops/backdrops-wallpapers/"
-arch = "arm64-v8a"
 
 [com.rarlab.rar]
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/rarlab-published-by-win-rar-gmbh/rar/"
 arch = "arm64-v8a"
 
 [eu.faircode.netguard]
 enabled = false
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/marcel-bokhorst/netguard-no-root-firewall/"
 exclusive-patches = true
 
 [com.google.android.apps.photos]
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/photos/"
 
 [com.adobe.lrmobile]
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/adobe/lightroom/"
 
 [Spotify]
 enabled = false
+version = "auto"
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 
 [IconPackStudio]
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
 
 [pl.solidexplorer2]
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/neatbytes/solid-explorer-beta/"
 
 [com.google.android.apps.recorder]
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/google-recorder/"
 
 [co.windyapp.android]
 enabled = false
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/windyty-se/windy-wind-waves-and-hurricanes-forecast/"
 
 [jp.pxv.android]
 enabled = false
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/pixiv-inc/pixiv/"
 
 [com.zombodroid.MemeGenerator]
 enabled = false
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/zombodroid/meme-generator-free/"
 
 [com.facebook.katana]
@@ -91,6 +108,8 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
 arch = "arm64-v8a"
 
 [com.microblink.photomath]
+enabled = false
+version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/photomath/"
 
 [io.yuka.android]
